--- a/DM_5_class_pilot_acronym_to_longform.ipynb
+++ b/DM_5_class_pilot_acronym_to_longform.ipynb
@@ -91,9 +91,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "from nltk.tokenize import TreebankWordTokenizer\n",    
     "#from nltk.stem.snowball import SnowballStemmer\n",
     "def sentence_vector(sentence):\n",
-    "    word_list = sentence.split()\n",
+    "    word_list = TreebankWordTokenizer().tokenize(sentence)\n",
     "    #stemmer = SnowballStemmer(\"english\", ignore_stopwords=True)\n",
     "    #word_list = [stemmer.stem(x) for x in word_list]\n",
     "    word_list = [word for word in word_list if word not in stop_words]\n",
@@ -105,7 +106,7 @@
     "            None    \n",
     "    return sum(word_vectors)/len(word_vectors)\n",
     "def vector_breakage(sentence):\n",
-    "    word_list = sentence.split()\n",
+    "    word_list = TreebankWordTokenizer().tokenize(sentence)\n",
     "    #stemmer = SnowballStemmer(\"english\", ignore_stopwords=True)\n",
     "    #word_list = [stemmer.stem(x) for x in word_list]\n",
     "    word_list = [word for word in word_list if word not in stop_words]\n",
