--- a/DM_5_class_pilot_acronym_to_longform.ipynb
+++ b/DM_5_class_pilot_acronym_to_longform.ipynb
@@ -20,7 +20,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "model = KeyedVectors.load_word2vec_format('/Word_sense_all_data/bio_nlp_vec/PubMed-shuffle-win-30.bin', binary=True)\n"
+    "model = KeyedVectors.load_word2vec_format('Data/PubMed-shuffle-win-30.bin', binary=True)\n"
    ]
   },
   {
@@ -140,7 +140,7 @@
     }
    ],
    "source": [
-    "df = pd.read_csv(\"/Word_sense_all_data/DM_dataset.csv\")\n",
+    "df = pd.read_csv(\"Data/DM_dataset.csv\")\n",
     "df = df[['sentence','label']]\n",
     "df['vec'] = [sentence_vector(x) for x in df.sentence]\n",
     "df.label.unique()\n"
